--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
   <!-- ===== HERO ===== -->
   <section id="inicio" class="hero">
     <div class="container">
-      <h1>El Sabor de Latino en Cada Compra</h1>
+      <h1>El Sabor Latino en Cada Compra</h1>
       <p>Frescura diaria • Precios justos • Calidad garantizada</p>
       <div class="hero-actions" role="group" aria-label="Acciones destacadas">
         <a class="btn" href="https://whatsapp.com/channel/0029VbBpK3I2f3EFCBkqI42g">Ver promociones</a>
