--- a/index.html
+++ b/index.html
@@ -1922,7 +1922,7 @@
       <div class="mexiquense-track" role="list" aria-label="Tarjetas de promociones exclusivas del Mexiquense">
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1514996937319-344454492b37?auto=format&fit=crop&w=600&q=80" alt="Docena de huevos frescos" loading="lazy">
+            <img src="https://www.instacart.com/image-server/1200x1200/www.instacart.com/assets/domains/product-image/file/large_6a930469-dbc4-44d6-92ea-331416ff4953.jpeg" alt="Docena de huevos frescos" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$1.99</span>
@@ -1935,27 +1935,27 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=600&q=80" alt="Botellas de leche sobre una mesa" loading="lazy">
+            <img src="https://i5.walmartimages.com/asr/c0d2f31c-08a1-4b4b-8a4a-204d8b010646.4cd43d99d75562863fb93014fdcccc8b.png?odnHeight=768&odnWidth=768&odnBg=FFFFFF" alt="Botellas de leche sobre una mesa" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$2.79</span>
-            <h3>Leche Prairie Farms 1L</h3>
+            <h3>Gallon de Leche Prairie Farms</h3>
             <p>Suave y cremosa, perfecta para tus licuados matutinos.</p>
             <div class="mexiquense-card__price" aria-label="Precio: $2.79">
-              <span class="mexiquense-card__amount">$2.79</span>
+              <span class="mexiquense-card__amount">$4.5</span>
             </div>
           </div>
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1483695028939-5bb13f8648b0?auto=format&fit=crop&w=600&q=80" alt="Pan dulce tradicional mexicano" loading="lazy">
+            <img src="https://d13jicmd7uan86.cloudfront.net/412d97e1-6e80-4c68-b04e-b1ba00b608e0/510?format=webp" alt="Pan dulce tradicional mexicano" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.25</span>
-            <h3>Pan dulce tricolor</h3>
-            <p>La docena consentida para las tardes con cafecito.</p>
+            <h3>Jugo Tampico</h3>
+            <p>El ponche cítrico de Tampico ofrece una combinación de sabores de naranja, mandarina y limón.</p>
             <div class="mexiquense-card__price" aria-label="Precio: $4.25">
-              <span class="mexiquense-card__amount">$4.25</span>
+              <span class="mexiquense-card__amount">$1.99</span>
             </div>
           </div>
         </article>
