Update product details for tortillas

--- a/index.html
+++ b/index.html
@@ -1965,10 +1965,10 @@
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$2.49</span>
-            <h3>Tortillas Guerrero 30 ct</h3>
-            <p>Tortilla suave ideal para tacos y quesadillas al instante.</p>
+            <h3>Harina Pan 5 LB</h3>
+            <p>Ideal para Arepas</p>
             <div class="mexiquense-card__price" aria-label="Precio: $2.49">
-              <span class="mexiquense-card__amount">$2.49</span>
+              <span class="mexiquense-card__amount">$4.99</span>
             </div>
           </div>
         </article>
