Update image source for Pan dulce card

--- a/index.html
+++ b/index.html
@@ -1948,7 +1948,7 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://d13jicmd7uan86.cloudfront.net/412d97e1-6e80-4c68-b04e-b1ba00b608e0/510?format=webp" alt="Pan dulce tradicional mexicano" loading="lazy">
+            <img src="https://miamarket.pe/assets/uploads/4809388d6e8dce0a4d3ace57dec9eb01.png" alt="Pan dulce tradicional mexicano" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$1.99</span>
