--- a/index.html
+++ b/index.html
@@ -1948,7 +1948,7 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://miamarket.pe/assets/uploads/4809388d6e8dce0a4d3ace57dec9eb01.png" alt="Pan dulce tradicional mexicano" loading="lazy">
+            <img src="https://i5.walmartimages.com/asr/9cff15dc-321a-465e-af26-4a927241673c.3539d159641763b2d4aadd480c233f36.jpeg" alt="Pan dulce tradicional mexicano" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$1.99</span>
