Update image source for Maseca product card

--- a/index.html
+++ b/index.html
@@ -1974,7 +1974,7 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="" alt="https://mir-s3-cdn-cf.behance.net/projects/404/e3d42539446033.Y3JvcCw3MzgsNTc3LDMxLDA.png" loading="lazy">
+            <img src="" alt="https://cdn.worldvectorlogo.com/logos/maseca.svg" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$3.99</span>
