Replace image and product details in index.html

--- a/index.html
+++ b/index.html
@@ -2039,14 +2039,14 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1514516430032-7f40ed986177?auto=format&fit=crop&w=600&q=80" alt="Botellas de salsa picante" loading="lazy">
+            <img src="https://carnesideal.tienda/cdn/shop/products/CRD15-1_2ec75d12-afea-432c-b0e8-8cf108370bba.jpg?v=1747962590" alt="Chuleta Agumada" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$1.59</span>
-            <h3>Salsa Valentina 1 lt</h3>
-            <p>El toque picante que nunca falta en la mesa mexicana.</p>
-            <div class="mexiquense-card__price" aria-label="Precio: $1.59">
-              <span class="mexiquense-card__amount">$1.59</span>
+            <span class="mexiquense-card__tag">$4.49</span>
+            <h3>Chuleta Ahumada</h3>
+            <p>Por libra.</p>
+            <div class="mexiquense-card__price" aria-label="Precio: $4.49">
+              <span class="mexiquense-card__amount">$4.49</span>
             </div>
           </div>
         </article>
