Update image source for Mexiquense card

--- a/index.html
+++ b/index.html
@@ -2000,7 +2000,7 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1474871256005-e04c67d9028f?auto=format&fit=crop&w=600&q=80" alt="Botella de aceite vegetal sobre una mesa" loading="lazy">
+            <img src="https://latorremx.vtexassets.com/arquivos/ids/165625/41281-frontal.jpg?v=637691351591400000" alt="Botella de aceite vegetal" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.99</span>
