Replace Queso Panela with Coca Cola product details

--- a/index.html
+++ b/index.html
@@ -2013,12 +2013,12 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1518554262033-95a38d2f4383?auto=format&fit=crop&w=600&q=80" alt="Queso fresco cortado sobre tabla" loading="lazy">
+            <img src="https://punto929.mx/cdn/shop/products/Coca_Cola_Original.jpg?v=1597039859" alt="Queso fresco cortado sobre tabla" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$5.49</span>
-            <h3>Queso Panela El Mexiquense 14 oz</h3>
-            <p>Textura suave que se dora perfecto en la plancha.</p>
+            <h3>Coca Cola 12 Pack Cans</h3>
+            <p>Refresco Coca-Cola Sabor Original, 12 latas de 355 ml c/u.</p>
             <div class="mexiquense-card__price" aria-label="Precio: $5.49">
               <span class="mexiquense-card__amount">$5.49</span>
             </div>
