Update image source for Maseca product

--- a/index.html
+++ b/index.html
@@ -1974,7 +1974,7 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="" alt="https://cdn.worldvectorlogo.com/logos/maseca.svg" loading="lazy">
+            <img src="" alt="https://rancholatinmarket.ca/cdn/shop/files/maseca_for_tortillas.jpg?v=1735250215&width=1024" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$3.99</span>
