Update product details and images in index.html

--- a/index.html
+++ b/index.html
@@ -2026,14 +2026,14 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1589712235273-01f96f2ec1ca?auto=format&fit=crop&w=600&q=80" alt="Crema fresca servida en un tazón" loading="lazy">
+            <img src="https://www.subodega.mx/articulo/922/03.webp" alt="Mutri Leche" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$3.19</span>
-            <h3>Crema La Vaquita 16 oz</h3>
-            <p>Cremosa y ligera para tus antojitos favoritos.</p>
-            <div class="mexiquense-card__price" aria-label="Precio: $3.19">
-              <span class="mexiquense-card__amount">$3.19</span>
+            <span class="mexiquense-card__tag">$2.79</span>
+            <h3>Nutri Leche 32 Oz</h3>
+            <p>Cremosa y ligera para el día día.</p>
+            <div class="mexiquense-card__price" aria-label="Precio: $2.79">
+              <span class="mexiquense-card__amount">$2.79</span>
             </div>
           </div>
         </article>
@@ -2052,27 +2052,14 @@
         </article>
         <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1511690656952-34342bb7c2f2?auto=format&fit=crop&w=600&q=80" alt="Chiles jalapeños frescos" loading="lazy">
+            <img src="https://www.instacart.com/image-server/600x600/filters:fill(FFFFFF,true):format(jpg)/d2lnr5mha7bycj.cloudfront.net/product-image/file/large_2bd25f2e-72bc-43b4-8448-5c84410a517e.jpg" alt="Taza de café de olla humeante" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$2.39</span>
-            <h3>Chiles Jalapeños La Morena 26 oz</h3>
-            <p>Listos para picar y acompañar tus platillos.</p>
-            <div class="mexiquense-card__price" aria-label="Precio: $2.39">
-              <span class="mexiquense-card__amount">$2.39</span>
-            </div>
-          </div>
-        </article>
-        <article class="mexiquense-card" role="listitem">
-          <figure class="mexiquense-card__media">
-            <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80" alt="Taza de café de olla humeante" loading="lazy">
-          </figure>
-          <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$6.99</span>
-            <h3>Café de olla molido 12 oz</h3>
+            <span class="mexiquense-card__tag">$7.99</span>
+            <h3>Nescafé Clásico 7.9 Oz</h3>
             <p>Aroma especiado para iniciar el día con calidez.</p>
-            <div class="mexiquense-card__price" aria-label="Precio: $6.99">
-              <span class="mexiquense-card__amount">$6.99</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $7.99">
+              <span class="mexiquense-card__amount">$7.99</span>
             </div>
           </div>
         </article>
