--- a/index.html
+++ b/index.html
@@ -1757,57 +1757,57 @@
     <p class="muted">Promos que se renuevan todos los miércoles..</p>
     <div class="product-carousel" role="list">
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Harina Pan</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Coca Cola</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://m.media-amazon.com/images/I/71Lxe9rdyQL.jpg" alt="Paquete de harina P.A.N." loading="lazy">
+          <img src="https://http2.mlstatic.com/D_Q_NP_907439-MLA95742758928_102025-O.webp" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Harina P.A.N. Maíz Blanco</h3>
+          <h3 class="product-title">Coca Cola 12 Pack Cans</h3>
           <div class="price-stack" aria-label="Precio promocional de Harina P.A.N. Maíz Blanco">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$5.29</span><span class="price-unit">/unidad</span>
+              <span>$9.99</span><span class="price-unit">/unidad</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$4.99</span><span class="price-unit">/unidad</span>
+              <span class="price-current">$6.99</span><span class="price-unit">/unidad</span>
             </span>
           </div>
         </div>
       </article>
 
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Maseca Maíz Instantáneo</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Jarritos 12 Oz Bottle</span></span>
         <div class="product-media" aria-hidden="true">
           <img src="https://images.unsplash.com/photo-1498837167922-ddd27525d352?auto=format&fit=crop&w=800&q=80" alt="Harina de maíz Maseca" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Maseca Maíz Instantáneo</h3>
+          <h3 class="product-title">Jarritos 12 Oz</h3>
           <div class="price-stack" aria-label="Precio promocional de Maseca Maíz Instantáneo">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$4.49</span><span class="price-unit">/unidad</span>
+              <span>$1.59</span><span class="price-unit">/unidad</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$3.99</span><span class="price-unit">/unidad</span>
+              <span class="price-current">$.99</span><span class="price-unit">/unidad</span>
             </span>
           </div>
         </div>
       </article>
 
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Frijoles Negros Listos</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Jugo de la Granja Gallon</span></span>
         <div class="product-media" aria-hidden="true">
           <img src="https://images.unsplash.com/photo-1514996937319-344454492b37?auto=format&fit=crop&w=800&q=80" alt="Frijoles negros listos para servir" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Frijoles Negros Listos</h3>
+          <h3 class="product-title">Jugo De La Granja</h3>
           <div class="price-stack" aria-label="Precio promocional de Frijoles Negros Listos">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$3.19</span><span class="price-unit">/unidad</span>
+              <span>$10.79</span><span class="price-unit">/unidad</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$2.79</span><span class="price-unit">/unidad</span>
+              <span class="price-current">$6.79</span><span class="price-unit">/unidad</span>
             </span>
           </div>
         </div>
