--- a/index.html
+++ b/index.html
@@ -1861,10 +1861,10 @@
           <div class="price-stack" aria-label="Precio promocional de Chiles Poblanos Frescos">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$1.29</span><span class="price-unit">/Libra</span>
+              <span>$1.29</span><span class="price-unit">/Por Libra</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$.79</span><span class="price-unit">/Libra</span>
+              <span class="price-current">$.79</span><span class="price-unit">/Por Libra</span>
             </span>
           </div>
         </div>
@@ -1880,10 +1880,10 @@
           <div class="price-stack" aria-label="Precio promocional de Pan Dulce Variado">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$1.29</span><span class="price-unit">/Libra</span>
+              <span>$1.29</span><span class="price-unit">/Por Libra</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$.79</span><span class="price-unit">/Libra</span>
+              <span class="price-current">$.79</span><span class="price-unit">/Por Libra</span>
             </span>
           </div>
         </div>
