Update promotion date in index.html

--- a/index.html
+++ b/index.html
@@ -1893,7 +1893,7 @@
       <span class="countdown-label" data-timer-label>Termina en</span>
       <span class="timer countdown-timer" role="timer">--:--:--</span>
     </p>
-    <p class="muted">Promociones validas solo el día 29 de Octubre</p>
+    <p class="muted">Promociones validas solo el día Miércoles 12 Noviembre</p>
   </section>
 
   <section id="recetas" class="recipes-hero" aria-labelledby="recetas-title">
