Update price unit from '/unidad' to '/Por Libra'

--- a/index.html
+++ b/index.html
@@ -1842,10 +1842,10 @@
           <div class="price-stack" aria-label="Precio promocional de Queso Fresco Artesanal">
             <span class="price-mixed">
               <span class="price-label">Antes:</span>
-              <span>$10.99</span><span class="price-unit">/unidad</span>
+              <span>$10.99</span><span class="price-unit">/Por Libra</span>
               <span class="price-divider" aria-hidden="true">|</span>
               <span class="price-label price-label--now">Ahora:</span>
-              <span class="price-current">$8.99</span><span class="price-unit">/unidad</span>
+              <span class="price-current">$8.99</span><span class="price-unit">/Por Libra</span>
             </span>
           </div>
         </div>
