Revert "Replace static countdown text with live timer"

--- a/index.html
+++ b/index.html
@@ -2146,10 +2146,7 @@
 
   <section id="ofertas" class="section section-miercolazo">
     <h2 class="section-title" style="color:var(--rojo)">MIERCOLAZO DE DESCUENTO %</h2>
-    <p class="muted" aria-live="polite">
-      <span class="countdown-label" data-timer-label>Termina en</span>
-      <span class="timer countdown-timer" role="timer">--:--:--</span>
-    </p>
+    <p class="muted">Cuenta regresiva permanente: los miércoles duran 24 horas y el resto de la semana rotan cada dos minutos.</p>
     <div class="offers-grid" role="list" aria-label="Ofertas destacadas">
       <article class="product-card" role="listitem">
         <span class="offer-badge" aria-live="polite"><span>Tomate Roma Fresco</span></span>
